# VoiceLens-Web

./: .gitignore  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md  pyproject.toml  requirements.txt  start.sh
backend/: __init__.py  config.py  llm_client.py  main.py
frontend/: app.js  index.html  styles.css
