[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "voicelens-web"
version = "1.0.0"
description = "🎙️ Lightweight Voice-Interactive LLM Web Assistant - 轻量级语音交互LLM Web助手"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["voice", "llm", "glm", "ai", "chat", "speech-recognition", "web-assistant"]
authors = [
    {name = "VoiceLens Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Chat",
]

[project.urls]
Homepage = "https://github.com/gitstq/VoiceLens-Web"
Repository = "https://github.com/gitstq/VoiceLens-Web"

[project.scripts]
voicelens = "backend.main:main"

[tool.setuptools.packages.find]
include = ["backend*"]